# gb-grid-margin

./: .gitignore  .project.yml  README.md  pyproject.toml
.githooks/: pre-commit
data/: interconnectors.json  nameplate.json  nameplate_series.json  scenarios.json
engine/: NOTES.md  build_site.py  capacity.py  chrome.py  derived.py  embedded_history.py  grid_engine.py  guards.py  history.py  import_cost.py  methodology.py  models.py  reliability.py  scenarios.py  sharecards.py  snapshot.py  solar_overcast.py  sources.py  system_price_history.py  warnings.py  widestore.py  wind_live_run.py  wind_unreliability.py
grid-sim/: CRITIQUES.md  SPEC.md
site/: about.html  app.js  conditions.js  conditions.test.mjs  fonts.css  import.html  index.html  live.js  live.test.mjs  methodology.html  parity_runner.mjs  postmortem-draw.js  postmortem.css  postmortem.js  postmortem.test.mjs  render.js  render.test.mjs  share.html  share.js  share.test.mjs  style.css  vercel.json  verdict.js  verdict.test.mjs  warnings.js  warnings.test.mjs  wind.html
tests/: test_build_site.py  test_capacity.py  test_capacity_gate.py  test_chrome.py  test_conditions_markup.py  test_derived.py  test_derived_gate.py  test_derived_guards.py  test_embedded_history.py  test_engine.py  test_guards.py  test_history.py  test_import_block.py  test_import_cost.py  test_import_cost_gate.py  test_js_syntax.py  test_methodology.py  test_models.py  test_nameplate.py  test_nameplate_series.py  test_parity.py  test_provenance_gate.py  test_reliability.py  test_reliability_card_parity.py  test_reliability_gate.py  (+17 more)
(+76 files in other folders)
