[project]
name = "grid-gauge"
version = "0.1.0"
description = "Live GB grid mix verdict — every figure traces to Elexon/NESO."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
